# prcpp-uebung1

./: .gitignore  CMakeLists.txt  build.sh  test.sh
img/: 00_corrupted.ppm  01_ex_t3.ppm  02_checkerboard.ppm  02_checkerboard_boxblur.ppm  02_checkerboard_gaussian.ppm  02_gradient.ppm  02_gradients.ppm  03_hubble.ppm  03_stars.ppm
include/: filter.hpp  histogram.hpp  image.hpp
src/: filter.cpp  histogram.cpp  image.cpp  main.cpp
test/: test_task1.cpp  test_task2.cpp  test_task3.cpp  test_task4.cpp  utils.cpp  utils.hpp
